btsync (1.1.90-1) unstable; urgency=low

  * Separated server from desktop package in order to permit
    separate releases (Closes #38)
  * Added debconf support for all advanced settings (Closes #36)
  * Fixed missing logfile generation broken with new btsync
    version 1.2.67 (Closes #40)
  * Added Galician translation to debconf templates contributed
    by Miguel Anxo Bouzada (Closes #35)
  * Added Spanish translation to debconf templates contributed
    by VCLL (Closes #26)
  * Added Chinese simplified translation to debconf templates contributed
    by Julian (Closes #43)

 -- Leo Moll <leo.moll@yeasoft.com>  Tue, 12 Nov 2013 14:57:49 +0100

btsync (1.1.82.1-3) unstable; urgency=low

  * The native upstream components from BitTorrent Inc. are no more
    included. All packages are now dependant upon the external
    package btsync-common which contains the btsync executables and
    documentation (Closes #18 and #19)
  * Fixed: The init script now tests on ARM systems if the btsync
    executable is compatible with the alignment handling and adapts
    it when needed (Closes #31 and #32)
  * Fixed: frontend was not be stopped on update in btsync-user
    (Closes #20)
  * Fixed: handling of update and remove of btsync-user is now
    working as expected (Closes #22)
  * Fixed: made initial installation less sensible against
    startup errors
  * Added German translation to debconf templates (Closes #23)
  * Added Italian translation to debconf templates contributed
    by Leo Moll and Andrea Pennelli (Closes #24)
  * Added French translation to debconf templates contributed
    by Quentin Scouflaire (Closes #25)
  * Added Russian translation to debconf templates contributed
    by dimitriy5181 (Closes #27)
  * Added Dutch translation to debconf templates contributed
    by Andras Kiss (Closes #28)
  * Added Hungarian translation to debconf templates contributed
    by Andras Kiss (Closes #29)
  * Added Czech translation to debconf templates contributed