@@ -7,7 +7,7 @@
 // to supply additional configuration parameters.
 //
 // Configuration parameters not parsed by btsync but by the daemon
-// scripts can be supplied as comments in the configuration file.
+// init script can be supplied as comments in the configuration file.
 //
 // The following parameters are supported:
 //
@@ -19,8 +19,16 @@
 //                  the daemon will run under the primary group
 //                  of the user
 //
-// DAEMON_UMASK:    The umask for the btsync damon. If omitted
-//                  the default umask is used.
+// DAEMON_UMASK:    The umask (up to 4 octal digits) for the
+//                  btsync daemon. If omitted the default umask
+//                  is used.
+//
+// DAEMON_DEBUG:    The debug mask (4 hex digits) for the btsync
+//                  daemon. If omitted the init script will not
+//                  touch potential settings defined manually.
+//                  If set to 0000, a potential settings file
+//                  will be deleted. Full detail is set by
+//                  specifying FFFF
 //
 // The parameter definition must use an equal sign ("="):
 //
